# thesis-implementation

./: .clang-format  .gitignore  CMakeLists.txt  README.md  do  pyproject.toml
lib/: cgl.hpp  counter.hpp  discrete_log.hpp  elliptic.hpp  entangled_basis.hpp  field.hpp  isogeny.hpp  mod.hpp  montgomery.hpp  prime.hpp  quadrt.hpp  radical.hpp  random.hpp  random_field.hpp  sqrt.hpp  strategy.hpp  utils.hpp
notebook/: README.md  collision.ipynb
operation-calc/: condition.py  fp.py  fp2.py  montgomery.py  mytype.py  parameter.py  strategy_optimization.py
operation-calc/exec/: compute_mean.py  convert_to_m.py  dpb.py  latex_output.py  main.py  sidh_ladder.py  strategy_optimize.py
src/: CMakeLists.txt  cgl.cpp  count-cgl.cpp  dpb_cgl.cpp  dpb_collision.cpp  drawSSIG.cpp  find_collision.cpp  hn23.cpp  measure_op_cost.cpp  modular_cgl.cpp  mpCGL.cpp  mycgl.cpp  radical_cgl.cpp  safe_dpb_cgl.cpp  time-cgl.cpp
test/: CMakeLists.txt  discrete_log_test.cpp  elliptic_test.cpp  entangled_basis_test.cpp  field_test.cpp  mod_test.cpp  montgomery_test.cpp  prime_test.cpp  quadrt_test.cpp  random_field_test.cpp  random_test.cpp  sqrt_test.cpp  utils_test.cpp
